--- a/package.json
+++ b/package.json
@@ -1,18 +1,20 @@
 {
-  "name": "apps",
+  "name": "app",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "start": "usoft serve",
+    "serve": "usoft serve",
     "build": "usoft build"
   },
   "dependencies": {
-    "core-js": "^3.6.5",
     "vue": "^2.6.11",
+    "vue-class-component": "^7.2.3",
+    "vue-property-decorator": "^8.4.2",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
+    "typescript": "~3.9.3",
     "vue-template-compiler": "^2.6.11"
   },
   "browserslist": [
