--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "start": "usoft serve",
-    "build": "usoft build"
+    "start": "usoft-vue start",
+    "build": "usoft-vue build"
   },
   "dependencies": {
     "core-js": "^3.6.5",
@@ -13,7 +13,7 @@
     "vuex": "^3.4.0"
   },
   "devDependencies": {
-    "vue-template-compiler": "^2.6.11"
+    "@usoft-fe/vue-cli": "^1.0.2"
   },
   "browserslist": [
     "> 1%",
