--- a/package.json
+++ b/package.json
@@ -7,13 +7,17 @@
     "build": "usoft-vue build"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "core-js": "^3.6.5",
+    "element-ui": "^2.13.2",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
-    "@usoft-fe/vue-cli": "^1.0.2"
+    "@usoft-fe/vue-cli": "^1.0.3",
+    "babel-eslint": "^10.1.0",
+    "eslint-plugin-vue": "^6.2.2"
   },
   "eslintConfig": {
     "root": true,
