--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "vuex": "^3.4.0"
   },
   "devDependencies": {
-    "@usoft-fe/vue-cli": "^1.0.6",
+    "@usoft-fe/vue-cli": "^1.0.7",
+    "autoprefixer": "^9.8.5",
     "babel-eslint": "^10.1.0",
     "eslint-plugin-vue": "^6.2.2",
     "less": "^3.12.2",
