--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "usoft-vue build"
   },
   "dependencies": {
-    "autoprefixer": "^9.8.5",
+    "element-ui": "^2.13.2",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.3",
     "vue-property-decorator": "^8.4.2",
@@ -17,15 +17,17 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^2.33.0",
     "@typescript-eslint/parser": "^2.33.0",
-    "@usoft-fe/vue-cli": "^1.0.8",
+    "@usoft-fe/vue-cli": "^1.0.10",
     "@vue/eslint-config-typescript": "^5.0.2",
-    "typescript": "~3.9.3",
     "autoprefixer": "^9.8.5",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
+    "eslint-loader": "^4.0.2",
     "eslint-plugin-vue": "^6.2.2",
-    "less": "^3.12.2",
-    "less-loader": "^6.2.0"
+    "sass": "^1.26.10",
+    "sass-loader": "^9.0.2",
+    "ts-loader": "^8.0.1",
+    "typescript": "~3.9.3"
   },
   "eslintConfig": {
     "root": true,
