--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "axios": "^0.19.2",
     "core-js": "^3.6.5",
     "element-ui": "^2.13.2",
+    "sass": "^1.26.10",
+    "sass-loader": "^9.0.2",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
@@ -18,9 +20,7 @@
     "@usoft-fe/vue-cli": "^1.0.10",
     "autoprefixer": "^9.8.5",
     "babel-eslint": "^10.1.0",
-    "eslint-plugin-vue": "^6.2.2",
-    "less": "^3.12.2",
-    "less-loader": "^6.2.0"
+    "eslint-plugin-vue": "^6.2.2"
   },
   "eslintConfig": {
     "root": true,
